# accelerations

./: .gitignore  README.md  setup.cfg
src/accelerations/: __init__.py  accelerator.py  bytes_operations.py  geodistance.py  hash.py  multi_dimensional_distance.py  settings.py  tiler.py
src/accelerations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_accelerations.py  testcase_test_geodistance_01.input_array1.txt  testcase_test_geodistance_01.input_array2.txt  testcase_test_geodistance_01_haversine.output_array.txt  testcase_test_geodistance_01_vincenty.output_array.txt  testcase_test_multi_dimensional_distance_01.input_array1.csv  testcase_test_multi_dimensional_distance_01.input_array2.csv
