[metadata]
name = accelerations
version = 0.0.1

[options]
python_requires = >= 3.8
package_dir=
    =src
include_package_data = True
packages = find:
install_requires =
    numba >= 0.53.1
    numpy >= 1.20.0
    pandas >= 1.3.1
    tqdm >= 4.60.0
    file_io >= 0.0.1
    execute_timer >= 0.0.1
    importlib; python_version == "3.8"

[options.packages.find]
where=src

[options.package_data]
* = data/*.*